--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,24 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended"],
     "parser": "@typescript-eslint/parser",
+    "plugins": ["react", "@typescript-eslint"],
+    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended"],
+    "env": {
+        "es2021": true,
+        "browser": true
+    },
     "parserOptions": {
+        "sourceType": "module",
+        "ecmaVersion": "latest",
         "ecmaFeatures": {
             "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        }
     },
-    "plugins": ["react", "@typescript-eslint"],
     "rules": {
         "indent": ["error", 4],
         "semi": ["error", "always"],
         "quotes": ["error", "single"],
         "linebreak-style": ["error", "windows"],
-        "@typescript-eslint/no-namespace": "off"
+        "@typescript-eslint/no-namespace": "off",
+        "no-console": ["error", { "allow": ["warm", "error"] }]
     }
 }
