--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
         "check-format": "prettier --check .",
         "check-types": "tsc --pretty --noEmit",
         "check-lint": "eslint src --ext ts --ext tsx --ext js --ext jsx",
-        "web": "NODE_ENV=development expo start --web",
-        "web:prod": "NODE_ENV=production expo start --web",
         "android": "NODE_ENV=development expo start --android",
         "android:prod": "NODE_ENV=production expo start --android",
         "android:build": "NODE_ENV=production expo build:android -t apk",
@@ -53,7 +51,7 @@
         "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
         "react-native-dotenv": "^3.3.1",
         "react-native-gesture-handler": "^2.1.0",
-        "react-native-maps": "^0.30.1",
+        "react-native-maps": "0.29.4",
         "react-native-paper": "^4.11.1",
         "react-native-safe-area-context": "3.3.2",
         "react-native-screens": "~3.10.1",
