feat: Suporte ao Flipper, ContainerForm, FormAuthentication e Styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -138,5 +138,6 @@
     "explorer.confirmDelete": false,
     "search.exclude": {
         "**/node_modules/**/*": true
-    }
+    },
+    "cSpell.language": "en,pt,pt-BR"
 }
