--- a/package.json
+++ b/package.json
@@ -36,20 +36,22 @@
         "expo": "^44.0.3",
         "expo-asset": "~8.4.5",
         "expo-cli": "^5.0.3",
+        "expo-community-flipper": "^44.0.0",
         "expo-font": "^10.0.4",
         "expo-splash-screen": "~0.14.1",
         "expo-status-bar": "~1.2.0",
-        "i18next": "^21.6.2",
+        "i18next": "^21.6.5",
         "jwt-decode": "^3.1.2",
         "lottie-react-native": "^5.0.1",
         "metro-react-native-babel-preset": "^0.66.2",
         "moment": "^2.29.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-hook-form": "^7.22.4",
+        "react-hook-form": "^7.22.5",
         "react-i18next": "^11.15.3",
         "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
         "react-native-dotenv": "^3.3.1",
+        "react-native-flipper": "^0.127.0",
         "react-native-gesture-handler": "^2.1.0",
         "react-native-maps": "0.29.4",
         "react-native-paper": "^4.11.1",
@@ -69,7 +71,7 @@
         "@stryker-mutator/typescript-checker": "^5.5.1",
         "@testing-library/react": "^12.1.2",
         "@types/jest": "^27.4.0",
-        "@types/node": "^17.0.6",
+        "@types/node": "^17.0.8",
         "@types/react": "~17.0.21",
         "@types/react-native": "~0.66.10",
         "@types/react-native-dotenv": "^0.2.0",
@@ -80,7 +82,7 @@
         "eslint": "^8.4.1",
         "eslint-plugin-react": "^7.27.1",
         "husky": "^7.0.0",
-        "jest": "^27.4.5",
+        "jest": "^27.4.6",
         "msw": "^0.36.3",
         "prettier": "^2.5.1",
         "ts-jest": "^27.1.2",
