--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-hook-form": "^7.22.5",
         "react-i18next": "^11.15.3",
         "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
+        "react-native-countdown-circle-timer": "^2.5.4",
         "react-native-dotenv": "^3.3.1",
         "react-native-flipper": "^0.127.0",
         "react-native-gesture-handler": "^2.1.0",
@@ -57,6 +58,7 @@
         "react-native-paper": "^4.11.1",
         "react-native-safe-area-context": "3.3.2",
         "react-native-screens": "~3.10.1",
+        "react-native-svg": "^12.1.1",
         "react-native-web": "^0.17.5",
         "react-redux": "^7.2.6",
         "react-thunk": "^1.0.0",
