--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
         "@react-navigation/native": "^6.0.6",
         "@react-navigation/stack": "^6.0.11",
         "@reduxjs/toolkit": "^1.7.1",
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/user-event": "^13.5.0",
         "axios": "^0.24.0",
         "expo": "^44.0.3",
         "expo-asset": "~8.4.5",
@@ -68,10 +66,13 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
+        "@babel/runtime": "^7.16.7",
         "@stryker-mutator/core": "^5.5.1",
         "@stryker-mutator/jest-runner": "^5.5.1",
         "@stryker-mutator/typescript-checker": "^5.5.1",
+        "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.4.0",
         "@types/node": "^17.0.8",
         "@types/react": "~17.0.21",
@@ -84,11 +85,14 @@
         "eslint": "^8.4.1",
         "eslint-plugin-react": "^7.27.1",
         "husky": "^7.0.0",
-        "jest": "^27.4.6",
+        "jest": "^27.4.7",
         "msw": "^0.36.3",
         "prettier": "^2.5.1",
         "ts-jest": "^27.1.2",
         "typescript": "~4.5.4"
+    },
+    "resolutions": {
+        "react-native/@jest/create-cache-key-function": "^27.4.2"
     },
     "husky": {
         "hooks": {
