--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react-native-flipper": "^0.127.0",
         "react-native-gesture-handler": "^2.1.0",
         "react-native-maps": "0.29.4",
+        "react-native-modal-datetime-picker": "^13.0.1",
         "react-native-paper": "^4.11.1",
         "react-native-safe-area-context": "3.3.2",
         "react-native-screens": "~3.10.1",
