--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
         "axios": "^0.24.0",
         "expo": "^44.0.3",
         "expo-asset": "~8.4.5",
+        "expo-auth-session": "~3.5.0",
         "expo-cli": "^5.0.3",
         "expo-community-flipper": "^44.0.0",
         "expo-font": "^10.0.4",
+        "expo-random": "~12.1.1",
         "expo-splash-screen": "~0.14.1",
         "expo-status-bar": "~1.2.0",
         "i18next": "^21.6.5",
