--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "version": "1.0.0",
     "main": "node_modules/expo/AppEntry.js",
     "scripts": {
+        "test": "jest",
         "eject": "expo eject",
         "start": "expo start",
-        "test": "jest --no-cache",
         "prepare": "husky install",
         "format": "prettier --write .",
         "check-format": "prettier --check .",
@@ -68,14 +68,15 @@
         "yup": "^0.32.11"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.9",
+        "@babel/core": "^7.16.7",
+        "@babel/preset-env": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
         "@babel/runtime": "^7.16.7",
         "@stryker-mutator/core": "^5.5.1",
         "@stryker-mutator/jest-runner": "^5.5.1",
         "@stryker-mutator/typescript-checker": "^5.5.1",
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
+        "@testing-library/jest-native": "^4.0.4",
+        "@testing-library/react-native": "^9.0.0",
         "@types/jest": "^27.4.0",
         "@types/node": "^17.0.8",
         "@types/react": "~17.0.21",
@@ -83,15 +84,16 @@
         "@types/react-native-dotenv": "^0.2.0",
         "@typescript-eslint/eslint-plugin": "^5.7.0",
         "@typescript-eslint/parser": "^5.7.0",
+        "babel-jest": "^27.4.6",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-preset-expo": "^9.0.2",
         "eslint": "^8.4.1",
         "eslint-plugin-react": "^7.27.1",
         "husky": "^7.0.0",
         "jest": "^27.4.7",
+        "jest-expo": "^44.0.1",
         "msw": "^0.36.3",
         "prettier": "^2.5.1",
-        "ts-jest": "^27.1.2",
         "typescript": "~4.5.4"
     },
     "resolutions": {
