feat: Test Utils

--- a/jest.config.json
+++ b/jest.config.json
@@ -8,7 +8,48 @@
     "cacheDirectory": ".jest/cache",
     "coverageDirectory": ".jest/coverage",
     "moduleFileExtensions": ["ts", "tsx", "js"],
+    "moduleDirectories": ["node_modules", "src"],
     "testPathIgnorePatterns": ["<rootDir>/node_modules/"],
-    "coveragePathIgnorePatterns": ["<rootDir>/node_modules/"],
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
+    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
+    "modulePathIgnorePatterns": [
+        "<rootDir>/src/hooks/",
+        "<rootDir>/src/views/",
+        "<rootDir>/src/forms/",
+        "<rootDir>/src/assets/",
+        "<rootDir>/src/router/",
+        "<rootDir>/src/App.tsx",
+        "<rootDir>/src/modules/",
+        "<rootDir>/src/storages/",
+        "<rootDir>/src/services/",
+        "<rootDir>/src/index.tsx",
+        "<rootDir>/src/utils/test/",
+        "<rootDir>/src/utils/cache/",
+        "<rootDir>/src/utils/styles/",
+        "<rootDir>/src/utils/themes/",
+        "<rootDir>/src/utils/locales/",
+        "<rootDir>/src/utils/constants/",
+        "<rootDir>/src/utils/validators/",
+        "<rootDir>/src/components/CacheLoader/"
+    ],
+    "coveragePathIgnorePatterns": [
+        "<rootDir>/src/hooks/",
+        "<rootDir>/src/views/",
+        "<rootDir>/src/forms/",
+        "<rootDir>/src/assets/",
+        "<rootDir>/src/router/",
+        "<rootDir>/src/App.tsx",
+        "<rootDir>/src/modules/",
+        "<rootDir>/node_modules/",
+        "<rootDir>/src/storages/",
+        "<rootDir>/src/services/",
+        "<rootDir>/src/index.tsx",
+        "<rootDir>/src/utils/test/",
+        "<rootDir>/src/utils/cache/",
+        "<rootDir>/src/utils/styles/",
+        "<rootDir>/src/utils/themes/",
+        "<rootDir>/src/utils/locales/",
+        "<rootDir>/src/utils/constants/",
+        "<rootDir>/src/utils/validators/",
+        "<rootDir>/src/components/CacheLoader/"
+    ]
 }
