--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -23,6 +23,7 @@
         "clinyong.vscode-css-modules",
         "philsinatra.nested-comments",
         "sonarsource.sonarlint-vscode",
+        "rioukkevin.vscode-git-commit",
         "formulahendry.auto-close-tag",
         "formulahendry.auto-rename-tag",
         "chakrounanas.turbo-console-log",
