--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@reduxjs/toolkit": "^1.7.1",
         "axios": "^0.24.0",
         "expo": "^44.0.3",
-        "expo-asset": "~8.4.5",
+        "expo-asset": "~8.4.6",
         "expo-auth-session": "~3.5.0",
         "expo-cli": "^5.0.3",
         "expo-community-flipper": "^44.0.0",
@@ -64,6 +64,7 @@
         "react-redux": "^7.2.6",
         "react-thunk": "^1.0.0",
         "redux-persist": "^6.0.0",
+        "redux-persist-transform-encrypt": "^3.0.1",
         "win-node-env": "^0.6.0",
         "yup": "^0.32.11"
     },
