--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "react-native-dotenv": "^3.3.1",
         "react-native-flipper": "^0.127.0",
         "react-native-gesture-handler": "^2.1.0",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
         "react-native-maps": "0.29.4",
         "react-native-modal-datetime-picker": "^13.0.1",
         "react-native-paper": "^4.11.1",
