:sparkles: feat: Adicionando Gitmoji ao workspace

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,7 @@
         "dbaeumer.vscode-eslint",
         "wix.vscode-import-cost",
         "esbenp.prettier-vscode",
+        "benjaminadk.emojis4git",
         "donjayamanne.githistory",
         "naumovs.color-highlight",
         "editorconfig.editorconfig",
@@ -23,7 +24,6 @@
         "clinyong.vscode-css-modules",
         "philsinatra.nested-comments",
         "sonarsource.sonarlint-vscode",
-        "rioukkevin.vscode-git-commit",
         "formulahendry.auto-close-tag",
         "formulahendry.auto-rename-tag",
         "chakrounanas.turbo-console-log",
