:sparkles: feat: Substituição do win-env por cross-env e adições no gitignore

--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
         "eject": "expo eject",
         "start": "expo start",
         "prepare": "husky install",
-        "test": "NODE_ENV=test jest",
+        "test": "cross-env NODE_ENV=test jest",
         "stryker": "npx stryker run",
         "format": "prettier --write .",
         "check-format": "prettier --check .",
         "check-types": "tsc --pretty --noEmit",
         "check-lint": "eslint src --ext ts --ext tsx",
-        "android": "NODE_ENV=development expo start --android",
-        "android:prod": "NODE_ENV=production expo start --android",
-        "android:build": "NODE_ENV=production expo build:android -t apk",
-        "ios": "NODE_ENV=development expo start --ios",
-        "ios:prod": "NODE_ENV=production expo start --ios",
-        "ios:build": "NODE_ENV=production expo build:ios -t simulator"
+        "android": "cross-env NODE_ENV=development expo start --android",
+        "android:prod": "cross-env NODE_ENV=production expo start --android",
+        "android:build": "cross-env NODE_ENV=production expo build:android -t apk",
+        "ios": "cross-env NODE_ENV=development expo start --ios",
+        "ios:prod": "cross-env NODE_ENV=production expo start --ios",
+        "ios:build": "cross-env NODE_ENV=production expo build:ios -t simulator"
     },
     "dependencies": {
         "@expo/vector-icons": "^12.0.5",
@@ -54,7 +54,7 @@
         "react-native-countdown-circle-timer": "^2.5.4",
         "react-native-dotenv": "^3.3.1",
         "react-native-flipper": "^0.127.0",
-        "react-native-gesture-handler": "^2.1.0",
+        "react-native-gesture-handler": "~2.1.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.5",
         "react-native-maps": "0.29.4",
         "react-native-modal-datetime-picker": "^13.0.1",
@@ -66,7 +66,6 @@
         "react-thunk": "^1.0.0",
         "redux-persist": "^6.0.0",
         "redux-persist-transform-encrypt": "^3.0.1",
-        "win-node-env": "^0.6.0",
         "yup": "^0.32.11"
     },
     "devDependencies": {
@@ -89,6 +88,7 @@
         "babel-jest": "^27.4.6",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-preset-expo": "^9.0.2",
+        "cross-env": "^7.0.3",
         "eslint": "^8.4.1",
         "eslint-plugin-react": "^7.27.1",
         "husky": "^7.0.0",
