--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-node_modules/
-.expo/
+# macOS
+.DS_Store
+
+# environment
+.env*
+
+# npm/yarn
+package-log.json
 dist/
+node_modules/
+*.lock
 npm-debug.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# expo
+.expo/
+web-build/
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
 *.orig.*
-web-build/
 
-# macOS
-.DS_Store
-
-# Environment
-.env*
-
-# Jest
+# jest
 .jest
 
-# Stryker
+# stryker
 reports
 .stryker-tmp
