:wrench: Alterações nas configurações do Metro e Babel, nova rule do eslint e adição de suporte ao GraphQL

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,11 +14,11 @@
         }
     },
     "rules": {
-        "indent": ["error", 4],
         "semi": ["error", "always"],
         "quotes": ["error", "single"],
         "linebreak-style": ["error", "windows"],
         "@typescript-eslint/no-namespace": "off",
+        "indent": ["error", 4, { "SwitchCase": 1 }],
         "no-console": ["error", { "allow": ["warm", "error"] }]
     }
 }
