--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "ios:build": "cross-env NODE_ENV=production expo build:ios -t simulator"
     },
     "dependencies": {
+        "@apollo/client": "^3.5.7",
         "@expo/vector-icons": "^12.0.5",
         "@hookform/resolvers": "^2.8.5",
         "@react-native-async-storage/async-storage": "^1.15.14",
@@ -41,6 +42,7 @@
         "expo-random": "~12.1.1",
         "expo-splash-screen": "~0.14.1",
         "expo-status-bar": "~1.2.0",
+        "graphql": "^16.2.0",
         "i18next": "^21.6.5",
         "jwt-decode": "^3.1.2",
         "lottie-react-native": "^5.0.1",
