--- a/package.json
+++ b/package.json
@@ -21,49 +21,49 @@
         "ios:build": "cross-env NODE_ENV=production expo build:ios -t simulator"
     },
     "dependencies": {
-        "@apollo/client": "^3.5.7",
+        "@apollo/client": "^3.5.10",
         "@expo/vector-icons": "^12.0.5",
-        "@hookform/resolvers": "^2.8.5",
-        "@react-native-async-storage/async-storage": "^1.15.14",
+        "@hookform/resolvers": "^2.8.8",
+        "@react-native-async-storage/async-storage": "~1.15.0",
         "@react-native-community/datetimepicker": "4.0.0",
         "@react-native-community/netinfo": "7.1.3",
-        "@react-native-picker/picker": "^2.2.1",
-        "@react-navigation/bottom-tabs": "^6.0.9",
-        "@react-navigation/native": "^6.0.6",
-        "@react-navigation/stack": "^6.0.11",
-        "@reduxjs/toolkit": "^1.7.1",
-        "axios": "^0.25.0",
-        "expo": "^44.0.3",
+        "@react-native-picker/picker": "2.2.1",
+        "@react-navigation/bottom-tabs": "^6.2.0",
+        "@react-navigation/native": "^6.0.8",
+        "@react-navigation/stack": "^6.1.1",
+        "@reduxjs/toolkit": "^1.8.0",
+        "axios": "^0.26.1",
+        "expo": "^44.0.6",
         "expo-asset": "~8.4.6",
         "expo-auth-session": "~3.5.0",
-        "expo-cli": "^5.0.3",
-        "expo-community-flipper": "^44.0.0",
-        "expo-font": "^10.0.4",
-        "expo-random": "~12.1.1",
-        "expo-splash-screen": "~0.14.1",
+        "expo-cli": "^5.3.0",
+        "expo-community-flipper": "^44.0.1",
+        "expo-font": "^10.0.5",
+        "expo-random": "~12.1.2",
+        "expo-splash-screen": "~0.14.2",
         "expo-status-bar": "~1.2.0",
-        "graphql": "^16.2.0",
-        "i18next": "^21.6.5",
+        "graphql": "^16.3.0",
+        "i18next": "^21.6.14",
         "jwt-decode": "^3.1.2",
         "lottie-react-native": "^5.0.1",
-        "metro-react-native-babel-preset": "^0.66.2",
+        "metro-react-native-babel-preset": "^0.69.0",
         "moment": "^2.29.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-hook-form": "^7.22.5",
-        "react-i18next": "^11.15.3",
+        "react-hook-form": "^7.27.1",
+        "react-i18next": "^11.15.6",
         "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
-        "react-native-countdown-circle-timer": "^2.5.4",
+        "react-native-countdown-circle-timer": "^3.0.9",
         "react-native-dotenv": "^3.3.1",
-        "react-native-flipper": "^0.127.0",
+        "react-native-flipper": "^0.138.0",
         "react-native-gesture-handler": "~2.1.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.5",
         "react-native-maps": "0.29.4",
         "react-native-modal-datetime-picker": "^13.0.1",
-        "react-native-paper": "^4.11.1",
+        "react-native-paper": "^4.11.2",
         "react-native-safe-area-context": "3.3.2",
         "react-native-screens": "~3.10.1",
-        "react-native-svg": "^12.1.1",
+        "react-native-svg": "12.1.1",
         "react-redux": "^7.2.6",
         "react-thunk": "^1.0.0",
         "redux-persist": "^6.0.0",
@@ -71,34 +71,34 @@
         "yup": "^0.32.11"
     },
     "devDependencies": {
-        "@babel/core": "^7.16.10",
-        "@babel/preset-env": "^7.16.10",
+        "@babel/core": "^7.17.5",
+        "@babel/preset-env": "^7.16.11",
         "@babel/preset-typescript": "^7.16.7",
-        "@babel/runtime": "^7.16.7",
-        "@stryker-mutator/core": "^5.5.1",
-        "@stryker-mutator/jest-runner": "^5.5.1",
-        "@stryker-mutator/typescript-checker": "^5.5.1",
+        "@babel/runtime": "^7.17.2",
+        "@stryker-mutator/core": "^5.6.1",
+        "@stryker-mutator/jest-runner": "^5.6.1",
+        "@stryker-mutator/typescript-checker": "^5.6.1",
         "@testing-library/jest-native": "^4.0.4",
         "@testing-library/react-native": "^9.0.0",
-        "@types/jest": "^27.4.0",
-        "@types/node": "^17.0.8",
-        "@types/react": "~17.0.21",
-        "@types/react-native": "~0.66.10",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^17.0.21",
+        "@types/react": "~17.0.40",
+        "@types/react-native": "~0.67.2",
         "@types/react-native-dotenv": "^0.2.0",
-        "@typescript-eslint/eslint-plugin": "^5.7.0",
-        "@typescript-eslint/parser": "^5.7.0",
-        "babel-jest": "^27.4.6",
+        "@typescript-eslint/eslint-plugin": "^5.14.0",
+        "@typescript-eslint/parser": "^5.14.0",
+        "babel-jest": "^27.5.1",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-preset-expo": "^9.0.2",
         "cross-env": "^7.0.3",
-        "eslint": "^8.4.1",
-        "eslint-plugin-react": "^7.27.1",
-        "husky": "^7.0.0",
-        "jest": "^27.4.7",
+        "eslint": "^8.10.0",
+        "eslint-plugin-react": "^7.29.3",
+        "husky": "^7.0.4",
+        "jest": "^27.5.1",
         "jest-expo": "^44.0.1",
-        "msw": "^0.36.3",
+        "msw": "^0.39.1",
         "prettier": "^2.5.1",
-        "typescript": "~4.5.4"
+        "typescript": "~4.6.2"
     },
     "resolutions": {
         "react-native/@jest/create-cache-key-function": "^27.4.2"
