--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "react-native-boilerplate",
   "description": "",
   "version": "0.0.1",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "keywords": [],
   "author": "gabruw",
   "repository": {
