--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -28,7 +28,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
 
       - name: Override "prepare" script
-        run: npm set-script prepare ""
+        run: npm pkg delete scripts.prepare
 
       - name: Install dependencies
         run: yarn install
@@ -70,13 +70,13 @@ jobs:
           key: ${{ github.sha }}
 
       - name: Check lint
-        run: yarn check-lint
+        run: yarn check:lint
 
       - name: Check types
-        run: yarn check-types
+        run: yarn check:types
 
       - name: Check format
-        run: yarn check-format
+        run: yarn check:format
 
   test:
     name: Test
