:sparkles: Adding expo localization mock

--- a/jest.config.json
+++ b/jest.config.json
@@ -15,7 +15,8 @@
         }
     },
     "transform": {
-        "^.+\\.(js|ts|tsx)$": [
+        "^.+\\.(ts|tsx)$": "ts-jest",
+        "^.+\\.(js|jsx)$": [
             "babel-jest",
             {
                 "rootMode": "upward"
