:wrench: Changing the Github Actions extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -22,11 +22,11 @@
         "xabikos.javascriptsnippets",
         "philsinatra.nested-comments",
         "sonarsource.sonarlint-vscode",
+        "github.vscode-github-actions",
         "formulahendry.auto-close-tag",
         "formulahendry.auto-rename-tag",
         "dsznajder.es7-react-js-snippets",
         "bierner.github-markdown-preview",
-        "cschleiden.vscode-github-actions",
         "christian-kohler.npm-intellisense",
         "christian-kohler.path-intellisense",
         "kisstkondoros.vscode-gutter-preview",
